--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.a filter=lfs diff=lfs merge=lfs -text
 *.framework filter=lfs diff=lfs merge=lfs -text
 *.framework.zip filter=lfs diff=lfs merge=lfs -text
+IJKMediaFramework/IJKMediaFramework filter=lfs diff=lfs merge=lfs -text
