--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.framework filter=lfs diff=lfs merge=lfs -text
 *.framework.zip filter=lfs diff=lfs merge=lfs -text
 IJKMediaFramework.framework/IJKMediaFramework filter=lfs diff=lfs merge=lfs -text
+IJKMediaFramework filter=lfs diff=lfs merge=lfs -text
